--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      DB_URL: 'mysql+mysqlconnector://root:rootpassword@mysql_db:3306/app_db'
+      APP_SECRET: "my_full_random_secret_key_123"
     container_name: python_app
     ports:
       - "5000:5000"
